--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -40,7 +40,7 @@ twig:
     strict_variables: "%kernel.debug%"
     form_theme:
     #Foundation
-    - foundation_5_layout.html.twig
+     - foundation_5_layout.html.twig
 
 # Doctrine Configuration
 doctrine:
@@ -50,7 +50,7 @@ doctrine:
         port:     "%database_port%"
         dbname:   "%database_name%"
         user:     "%database_user%"
-        password: "%database_password%"
+        password: root
         charset:  UTF8
         # if using pdo_sqlite as your database driver:
         #   1. add the path in parameters.yml
