--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
-        "symfony/assetic-bundle": "^2.8"
+        "symfony/assetic-bundle": "^2.8",
+        "symfony/var-dumper": "^3.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
