--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "symfony/assetic-bundle": "^2.8",
-        "symfony/var-dumper": "^3.2"
+        "symfony/var-dumper": "^3.2",
+        "symfony/serializer": "^3.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
