--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -28,6 +28,7 @@ framework:
         # http://symfony.com/doc/current/reference/configuration/framework.html#handler-id
         handler_id:  session.handler.native_file
         save_path:   "%kernel.root_dir%/../var/sessions/%kernel.environment%"
+        name: eiuaeiua
     fragments:       ~
     http_method_override: true
     assets: ~
@@ -52,6 +53,7 @@ doctrine:
         user:     "%database_user%"
         password: root
         charset:  UTF8
+        server_version: 5.6
         # if using pdo_sqlite as your database driver:
         #   1. add the path in parameters.yml
         #     e.g. database_path: "%kernel.root_dir%/../var/data/data.sqlite"
