--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -72,3 +72,4 @@ services:
         class: AppBundle\Manager\BillManager
         arguments:
             - '@doctrine.orm.default_entity_manager'
+            - '@validator'
