--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "symfony/serializer": "^3.2",
         "stripe/stripe-php": "^4.9",
         "phpmailer/phpmailer": "^5.2",
-        "league/oauth2-google": "^2.0"
+        "league/oauth2-google": "^2.0",
+        "ramsey/uuid": "^3.6"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
